[package]
name = "rsdparsa"
version = "0.1.0"
authors = ["Nils Ohlmeier <github@ohlmeier.org>"]

[features]
default = []
# json
serialize = ["serde", "serde_derive"]

[dependencies]
clippy = {version = "*", optional = true}
serde = {version = "1.0.27" , optional = true}
serde_derive = {version = "1.0.27" , optional = true}
